cmake_minimum_required(VERSION 3.14)

set(LIB_COMMON_INCLUDE_DIRS 
${CMAKE_CURRENT_SOURCE_DIR}/include
CACHE STRING INTERNAL FORCE
)

include_directories(LIB_COMMON
${OpenCV_INCLUDE_DIRS} 
${LIB_COMMON_INCLUDE_DIRS}
)

file(GLOB COMMON_CALC_PMP_SOURCES "src/calc_pmp/*.cpp")
ADD_LIBRARY(LIB_COMMON STATIC 
    ${COMMON_CALC_PMP_SOURCES}
)

target_link_libraries(LIB_COMMON
    ${OpenCV_LIBS}
)

SET_TARGET_PROPERTIES (LIB_COMMON PROPERTIES OUTPUT_NAME "common")
GET_TARGET_PROPERTY (OUTPUT_VALUE LIB_COMMON OUTPUT_NAME)
MESSAGE (STATUS "This is the LIB_COMMON OUTPUT_NAME: " ${OUTPUT_VALUE} "\nLIB_COMMON_INCLUDE_DIRS:" ${LIB_COMMON_INCLUDE_DIRS})

SET_TARGET_PROPERTIES (LIB_COMMON PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (LIB_COMMON PROPERTIES VERSION 1.0 SOVERSION 1)
# add_subdirectory(calc_pmp_phase)