cmake_minimum_required(VERSION 3.14)

include_directories(LIB_HUMANPOSE 
${OpenCV_INCLUDE_DIRS} 
./include
)
ADD_LIBRARY(LIB_HUMANPOSE STATIC 
    ./src/slpn.cpp
)

target_link_libraries(LIB_HUMANPOSE
    ${OpenCV_LIBS}
    ncnn
)

SET_TARGET_PROPERTIES (LIB_HUMANPOSE PROPERTIES OUTPUT_NAME "humanpose")
GET_TARGET_PROPERTY (OUTPUT_VALUE LIB_YOLOX OUTPUT_NAME)
MESSAGE (STATUS "This is the LIB_HUMANPOSE OUTPUT_NAME: " ${OUTPUT_VALUE})

SET_TARGET_PROPERTIES (LIB_HUMANPOSE PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (LIB_HUMANPOSE PROPERTIES VERSION 1.0 SOVERSION 1)